@@ -8,3 +8,4 @@ email.txt
 log
 .project
 .loadpath
+*.swp
