@@ -184,6 +184,9 @@ module Webrat
     def_delegators :current_scope, :uncheck,            :unchecks
     def_delegators :current_scope, :choose,             :chooses
     def_delegators :current_scope, :select,             :selects
+    def_delegators :current_scope, :select_datetime,    :selects_datetime
+    def_delegators :current_scope, :select_date,        :selects_date
+    def_delegators :current_scope, :select_time,        :selects_time
     def_delegators :current_scope, :attach_file,        :attaches_file
     def_delegators :current_scope, :click_area,         :clicks_area
     def_delegators :current_scope, :click_link,         :clicks_link
